New settings for sonar-server-benchmarks