@@ -9,11 +9,11 @@
     <relativePath>..</relativePath>
   </parent>
   <artifactId>sonar-server-benchmarks</artifactId>
-  <name>SonarQube :: Server :: Benchmark</name>
+  <name>SonarQube :: Server :: Benchmarks</name>
 
   <properties>
-    <testInclusions/>
-    <enableBenchmarkAssertions>true</enableBenchmarkAssertions>
+    <skipBenchmarks>true</skipBenchmarks>
+    <enableBenchmarkAssertions>false</enableBenchmarkAssertions>
   </properties>
 
   <dependencies>
@@ -54,11 +54,15 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <skipTests>${skipServerTests}</skipTests>
-          <argLine>-Xmx1G -Xms256m -server -Djava.awt.headless=true -DenableBenchmarkAssertions=${enableBenchmarkAssertions}</argLine>
-          <includes>
-            <include>${testInclusions}</include>
-          </includes>
+          <redirectTestOutputToFile>false</redirectTestOutputToFile>
+          <skipTests>${skipBenchmarks}</skipTests>
+          <argLine>
+            -Xmx1G -Xms256m -server -Djava.awt.headless=true
+            -DenableBenchmarkAssertions=${enableBenchmarkAssertions}
+            -Xss256k -Djava.net.preferIPv4Stack=true
+            -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75
+            -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
@@ -77,7 +81,8 @@
         </property>
       </activation>
       <properties>
-        <testInclusions>org/sonar/server/benchmark/**/*.java</testInclusions>
+        <enableBenchmarkAssertions>true</enableBenchmarkAssertions>
+        <skipBenchmarks>false</skipBenchmarks>
       </properties>
     </profile>
   </profiles>
